# TPMCluely

./: .gitignore  EXECUTION_BOARD.md  IMPLEMENTATION_PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: permissions-matrix.md  provider-parity.md  release-checklist.md
fixtures/: README.md
fixtures/providers/: deepgram_partial_final.json
fixtures/transcripts/: live-session-basic.txt
scripts/: run-vitest-sequential.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: commands.rs  events.rs  state.rs
src-tauri/src/audio/: buffering.rs  capture.rs  macos_bridge.m  mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  rag.rs
src-tauri/src/exports/: mod.rs
src-tauri/src/github/: mod.rs
src-tauri/src/insights/: mod.rs
src-tauri/src/knowledge/: mod.rs
src-tauri/src/permissions/: macos.rs  mod.rs
src-tauri/src/prompts/: mod.rs
src-tauri/src/providers/: linear.rs  llm.rs  mod.rs  stt.rs
src-tauri/src/rag/: mod.rs
src-tauri/src/repo_search/: mod.rs
src-tauri/src/screenshot/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/session/: manager.rs  mod.rs  state_machine.rs
src-tauri/src/tickets/: mod.rs
src-tauri/src/transcript/: mod.rs
src-tauri/src/window/: mod.rs  stealth.m
src/__e2e__/: smoke.spec.ts
src/__tests__/: app.test.tsx  assistant-feed.test.tsx  assistant-stream.test.ts  dashboard-search.test.tsx  live-transcription.test.ts  mock-backend.test.ts  preflight.test.ts  session-controls.test.tsx  ticket-dashboard.test.tsx  ticket-engine.test.ts
src/components/: AssistantFeed.tsx  SearchBar.tsx  SpeakerRoster.tsx  TicketCard.tsx
src/dashboard/: CrossSessionAskBar.tsx  DashboardApp.tsx  FileLibrary.tsx  InsightsDashboard.tsx  NotesView.tsx  PromptLibrary.tsx  SessionDetail.tsx  SessionsList.tsx  Settings.tsx  TicketDashboard.tsx  TranscriptView.tsx
src/lib/: export.ts  mock-backend.ts  preflight.ts  shortcuts.ts  tauri.ts  ticket-engine.ts  types.ts
src/onboarding/: OnboardingApp.tsx
src/session/: AskBar.tsx  DynamicActions.tsx  SessionControls.tsx  SessionWidget.tsx  SystemAudioSourcePicker.tsx  TranscriptPanel.tsx  useLiveTranscription.ts
ticket-generator/: .env.example  README.md  package-lock.json  package.json  proxy.ts
ticket-generator/app/: globals.css  layout.tsx  page.tsx
ticket-generator/app/api/generate/: route.ts
ticket-generator/app/api/linear/: route.ts
ticket-generator/app/components/: TicketCard.tsx
ticket-generator/lib/server/: errors.ts  generate-tickets.ts  idempotency.ts  linear.ts  rate-limit.ts  request-validation.ts  resilience.ts  security.ts  ticket-normalization.ts  transcript.ts
ticket-generator/lib/shared/: tickets.ts
ticket-generator/tests/: linear.test.ts  rate-limit.test.ts  ticket-normalization.test.ts  transcript.test.ts
