[package]
name = "cluely_desktop"
version = "0.1.0"
edition = "2021"
description = "Cluely-style desktop assistant with local-first transcript and ticket workflows"
license = "UNLICENSED"
publish = false

[lib]
name = "cluely_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", default-features = true }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
